@@ -1,5 +1,11 @@
 2006-04-30  Marco Gerards  <marco@gnu.org>
 
+	* commands/configfile.c (grub_cmd_source): New function.
+	(GRUB_MOD_INIT): Register the commands `source' and `.'.
+	(GRUB_MOD_FINI): De-register the commands `source' and `.'.
+
+2006-04-30  Marco Gerards  <marco@gnu.org>
+
 	* normal/execute.c (grub_script_execute_cmd): Change the return
 	type to `grub_err_t'.  Correctly return the error.
 	(grub_script_execute_cmdline): In case a command line is not a
